[Add] Some description in GPR.ipynb

--- a/GaussianProcessRegression/GPR.ipynb
+++ b/GaussianProcessRegression/GPR.ipynb
@@ -163,7 +163,7 @@
     "                     &= \\arg\\min (\\mathbf{y}-\\mathrm{X}^{\\mathsf{T}}\\mathbf{w})^{\\mathsf{T}}\n",
     "                                 (\\mathbf{y}-\\mathrm{X}^{\\mathsf{T}}\\mathbf{w}) \\\\\n",
     "                     &= \\arg\\min \\mathbf{w}^{\\mathsf{T}}\\mathrm{X}\\mathrm{X}^{\\mathsf{T}}\\mathbf{w}\n",
-    "                                 -2\\mathbf{w}^{\\mathsf{T}}\\mathrm{X}\\mathbf{y} + \\mathbf{y}^{\\mathsf{T}}\\mathbf{y}\\tag{1}.\n",
+    "                                 -2\\mathbf{w}^{\\mathsf{T}}\\mathrm{X}\\mathbf{y} + \\mathbf{y}^{\\mathsf{T}}\\mathbf{y}\\tag{2}.\n",
     "\\end{align}\n",
     "$$"
    ]
@@ -602,7 +602,7 @@
    "metadata": {},
    "source": [
     "$$\n",
-    "y \\sim \\mathcal{N}(\\mathbf{w}^{\\mathsf{T}}\\mathbf{x}, \\sigma^2).\n",
+    "y|\\mathbf{w},\\mathbf{x} \\sim \\mathcal{N}(\\mathbf{w}^{\\mathsf{T}}\\mathbf{x}, \\sigma^2).\\tag{3}\n",
     "$$"
    ]
   },
@@ -619,8 +619,8 @@
    "source": [
     "$$\n",
     "\\begin{align}\n",
-    "    \\hat{\\mathbf{w}}_{\\mathrm{MLE}} &= \\arg\\max\\sum_{i=1}^{n}\\log p(y_i|\\mathbf{x}_i)\\\\\n",
-    "                                    &= \\arg\\max_{\\mathbf{w}}\\sum_{i=1}^{n}\\frac{-(y-\\mathbf{w}^{\\mathsf{T}}\\mathbf{x})^2}{2\\sigma^2} + \\mathrm{const.},\n",
+    "    \\hat{\\mathbf{w}}_{\\mathrm{MLE}} &= \\arg\\max\\sum_{i=1}^{n}\\log p(y_i|\\mathbf{x}_i, \\mathbf{w})\\\\\n",
+    "                                    &= \\arg\\max_{\\mathbf{w}}\\sum_{i=1}^{n}\\frac{-(y_i-\\mathbf{w}^{\\mathsf{T}}\\mathbf{x}_i)^2}{2\\sigma^2} + \\mathrm{const.},\n",
     "\\end{align}\n",
     "$$ "
    ]
@@ -638,6 +638,103 @@
    "source": [
     "Important thing here is **homogeneity of variance**. It cannot express our intuition that `close input points output close values'."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To overcome this problem, we introduce prior distribution for $\\mathbf{w}$:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "    \\mathbf{w} \\sim \\mathcal{N}(\\mathbf{0}, \\mathrm{\\Sigma}),\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "which is independent of $\\mathrm{X}$. Incorporating this with eq. (3), we can calculate posterior distribution of $\\mathbf{w}$ under observation of $\\mathbf{y}$:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "\\begin{align}\n",
+    "    \\log p(\\mathbf{w}|\\mathbf{y}, \\mathrm{X}) &\\propto \\log p(\\mathbf{w}) + \\log p(\\mathbf{y}|\\mathbf{w},\\mathrm{X})\\\\\n",
+    "                                         &=\\log p(\\mathbf{w}) + \\sum_{i=1}^{n} \\log p(y_i|\\mathbf{w},\\mathbf{x}_i)\\\\\n",
+    "                                         &=-\\frac{1}{2}\\mathbf{w}^{\\mathsf{T}}\\mathrm{\\Sigma}^{-1}\\mathbf{w}\n",
+    "                                           -\\sum_{i=1}^{n} \\frac{(y_i-\\mathbf{w}^{\\mathsf{T}}\\mathbf{x}_i)^2}{2\\sigma^2}\\\\\n",
+    "                                         &=-\\frac{1}{2}\\mathbf{w}^{\\mathsf{T}}\\mathrm{\\Sigma}^{-1}\\mathbf{w}\n",
+    "                                           -\\frac{1}{2\\sigma^2}\\mathbf{w}^{\\mathsf{T}}\\left(\\sum_{i=1}^{n}\\mathbf{x}_i\\mathbf{x}_i^{\\mathsf{T}}\\right)\\mathbf{w}\n",
+    "                                           +\\frac{1}{\\sigma^2}\\mathbf{w}^{\\mathsf{T}}\\left(\\sum_{i=1}^{n}y_i\\mathbf{x}_i\\right)+\\mathrm{const.}\\\\\n",
+    "                                         &=-\\frac{1}{2\\sigma^2}\\left(\\mathbf{w}-(\\mathrm{R}+\\sigma^2\\Sigma^{-1})^{-1}\\mathbf{q}\\right)^{\\mathsf{T}}\n",
+    "                                           \\left(\\mathrm{R}+\\sigma^2\\Sigma^{-1}\\right)\n",
+    "                                           \\left(\\mathbf{w}-(\\mathrm{R}+\\sigma^2\\Sigma^{-1})^{-1}\\mathbf{q}\\right)+\\mathrm{const.},\n",
+    "\\end{align}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "where $\\mathrm{R}=\\sum_{i=1}^{n}\\mathbf{x}_i\\mathbf{x}_i^{\\mathsf{T}}, \\mathbf{q}=\\sum_{i=1}^ny_i\\mathbf{x}_i$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Therefore, now we know prior distribution of $\\mathbf{w}$ is"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "    \\mathbf{w}|\\mathbf{y}, \\mathrm{X} \\sim \\mathcal{N}\\left((\\mathrm{R}+\\sigma^2\\Sigma^{-1})^{-1}\\mathbf{q}, \\left(\\Sigma^{-1}+\\frac{1}{\\sigma^2}\\mathrm{R}\\right)^{-1}\\right).\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Using this probability, we get distribution of predicted $y$ at new input point $\\mathbf{x}^{\\ast}$:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "    y^{\\ast}|\\mathbf{x}^{\\ast}, \\mathbf{y}, \\mathrm{X} \\sim \\mathcal{N}\\left(\\mathbf{q}^{\\mathsf{T}}(\\mathrm{R}+\\sigma^2\\Sigma^{-1})^{-1}\\mathbf{x}^{\\ast},\n",
+    "                                                            \\sigma^2 + (\\mathbf{x}^{\\ast})^{\\mathsf{T}}\\left(\\Sigma^{-1}+\\frac{1}{\\sigma^2}\\mathrm{R}\\right)^{-1}\\mathbf{x}^{\\ast}\\right)\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
