[Add] kernel ridge regression

--- a/BayesianRegression/BayesReg.ipynb
+++ b/BayesianRegression/BayesReg.ipynb
@@ -495,9 +495,9 @@
    "source": [
     "$$\n",
     "\\begin{align}\n",
-    "    \\hat{\\mathbf{w}} &= \\arg\\min \\|\\mathbf{y}-\\hat{\\mathbf{y}}\\|^2 + \\alpha\\|\\mathbf{w}\\|^2\\\\\n",
-    "                     &= \\arg\\min \\mathbf{w}^{\\mathsf{T}}(\\mathrm{X}\\mathrm{X}^{\\mathsf{T}}+\\alpha\\mathrm{I})\\mathbf{w}\n",
-    "                                 -2\\mathbf{w}^{\\mathsf{T}}\\mathrm{X}\\mathbf{y} + \\mathbf{y}^{\\mathsf{T}}\\mathbf{y}.\\\\\n",
+    "    \\hat{\\mathbf{w}} &= \\arg\\min \\left\\{\\|\\mathbf{y}-\\hat{\\mathbf{y}}\\|^2 + \\alpha\\|\\mathbf{w}\\|^2\\right\\}\\\\\n",
+    "                     &= \\arg\\min \\left\\{\\mathbf{w}^{\\mathsf{T}}(\\mathrm{X}\\mathrm{X}^{\\mathsf{T}}+\\alpha\\mathrm{I})\\mathbf{w}\n",
+    "                                 -2\\mathbf{w}^{\\mathsf{T}}\\mathrm{X}\\mathbf{y} + \\mathbf{y}^{\\mathsf{T}}\\mathbf{y}\\right\\}.\\\\\n",
     "\\end{align}\n",
     "$$"
    ]
@@ -913,17 +913,50 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### 4-2. Applying kernel method ridge regression"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 4-2. Applying kernel method ridge regression"
+    "Same as the introduction of regularization term in ridge regression, we introduce a regulartization term $\\|\\mathbf{w}\\|_{\\mathbb{F}}^2=\\langle \\mathbf{w}, \\mathbf{w}\\rangle$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "\\begin{align}\n",
+    "    l(\\mathbf{w}) &= \\|\\mathbf{y}-\\mathrm{K}\\mathbf{c}\\|^2 + \\alpha\\|\\mathbf{w}\\|_{\\mathbb{F}}^2\\\\\n",
+    "                  &= \\|\\mathbf{y}-\\mathrm{K}\\mathbf{c}\\|^2 + \\alpha \\langle \\mathbf{w}, \\mathbf{w} \\rangle\\\\\n",
+    "                  &= \\|\\mathbf{y}-\\mathrm{K}\\mathbf{c}\\|^2 + \\alpha \\left\\langle \\sum_{i=1}^{n}c_{i}\\phi(\\mathbf{x}_{i}), \\sum_{j=1}^{n}c_{j}\\phi(\\mathbf{x}_{j}) \\right\\rangle\\\\\n",
+    "                  &= \\|\\mathbf{y}-\\mathrm{K}\\mathbf{c}\\|^2 + \\alpha \\sum_{i=1}^{n}\\sum_{j=1}^{n}c_{i}c_{j}\\langle \\phi(\\mathbf{x}_{i}), \\phi(\\mathbf{x}_{j}) \\rangle\\\\\n",
+    "                  &= \\|\\mathbf{y}-\\mathrm{K}\\mathbf{c}\\|^2 + \\alpha \\mathbf{c}^{\\mathsf{T}}\\mathrm{K}\\mathbf{c}\\\\\n",
+    "                  &= \\mathbf{c}^{\\mathsf{T}}(\\mathrm{K}^2+\\alpha\\mathrm{K})\\mathbf{c} -2\\mathbf{c}^{\\mathsf{T}}\\mathrm{K}\\mathbf{y} +\\|\\mathbf{y}\\|^2\\\\\n",
+    "                  &= (\\mathbf{c}-(\\mathrm{K}+\\alpha\\mathrm{I})^{-1}\\mathbf{y})^{\\mathsf{T}}(\\mathrm{K}^2+\\alpha\\mathrm{K})\n",
+    "                     (\\mathbf{c}-(\\mathrm{K}+\\alpha\\mathrm{I})^{-1}\\mathbf{y}) + \\mathrm{const.}\n",
+    "\\end{align}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Obviously, $\\hat{\\mathbf{c}} = (\\mathrm{K}+\\alpha\\mathrm{I})^{-1}\\mathbf{y}$, $\\hat{\\mathbf{w}} = \\mathbf{y}^{\\mathsf{T}}(\\mathrm{K}+\\alpha\\mathrm{I})^{-1}\\Phi$,\n",
+    "and $y^{\\ast} = \\mathbf{y}^{\\mathsf{T}}(\\mathrm{K}+\\alpha\\mathrm{I})^{-1}\\mathbf{k}(\\mathbf{x}^{\\ast})$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 4-3. Reproducing kernel Hilbert space (RKHS)"
    ]
   },
   {
