[Add] Introduction to RKHS

--- a/BayesianRegression/BayesReg.ipynb
+++ b/BayesianRegression/BayesReg.ipynb
@@ -865,8 +865,15 @@
    "metadata": {},
    "source": [
     "$$\n",
-    "    \\hat{\\mathbf{c}}=\\mathrm{K}^{-1}\\mathbf{y}.\n",
+    "    \\hat{\\mathbf{c}}=\\mathrm{K}^{-1}\\mathbf{y},\n",
     "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "when $\\mathrm{K}$ is invertible."
    ]
   },
   {
@@ -949,7 +956,7 @@
    "metadata": {},
    "source": [
     "Obviously, $\\hat{\\mathbf{c}} = (\\mathrm{K}+\\alpha\\mathrm{I})^{-1}\\mathbf{y}$, $\\hat{\\mathbf{w}} = \\mathbf{y}^{\\mathsf{T}}(\\mathrm{K}+\\alpha\\mathrm{I})^{-1}\\Phi$,\n",
-    "and $y^{\\ast} = \\mathbf{y}^{\\mathsf{T}}(\\mathrm{K}+\\alpha\\mathrm{I})^{-1}\\mathbf{k}(\\mathbf{x}^{\\ast})$."
+    "and $y^{\\ast} = \\mathbf{y}^{\\mathsf{T}}(\\mathrm{K}+\\alpha\\mathrm{I})^{-1}\\mathbf{k}(\\mathbf{x}^{\\ast})$, when $\\mathrm{K}+\\alpha\\mathrm{I}$ is invertible."
    ]
   },
   {
@@ -957,6 +964,33 @@
    "metadata": {},
    "source": [
     "### 4-3. Reproducing kernel Hilbert space (RKHS)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In the above sections, we used nonlinear map $\\phi$, but we did not specify its explicit form.\n",
+    "Surprisingly, for some feature spaces within a certain class, we do not need to know $\\phi$ itself.\n",
+    "To be more pricise, for **reproducing kernel Hilbert space**, we can calculate inner product without using $\\phi$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Above-mentioned methods use only $\\mathrm{K}$ and $\\mathbf{k}(\\mathbf{x}^{\\ast})$ for prediction, which involve only inner product calculation.\n",
+    "So, we only need to specify the function $k(\\cdot, \\cdot):\\mathbb{R}\\times\\mathbb{R}\\to\\mathbb{R}$.  \n",
+    "However, two problems arise:\n",
+    "1. For arbitrarily selected $k(\\cdot, \\cdot)$, do there exist corresponding $\\mathbb{F}$ and $\\phi$?\n",
+    "2. For arbitrarily selected $k(\\cdot, \\cdot)$, is $\\mathrm{K}$ (or $\\mathrm{K}+\\alpha\\mathrm{I}$) always invertible?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The answers are No. But, partially, Yes. Choosing appropriate $k$, there exist corresponding $\\mathbb{F}$ and $\\phi$, and $\\mathrm{K}$ is always invertible for any $\\mathrm{X}$."
    ]
   },
   {
